webのトップページと画像のアップロード部分の完成

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>第８回課題</title>
+    <title>第11回課題</title>
 </head>
 
 <body>
-    <h1>K22120 - 第８回課題</h1>
+    <h1>team6 - 第11回課題</h1>
     <ol>
-        <li><a href="/janken">じゃんけんゲーム</a></li>
-        <li><a href="/uranai">占い</a></li>
+        <li><a href="/upload">画像をアップロードする</a></li>
+        <li><a href="/gray">グレースケール画像の表示</a></li>
+        <li><a href="/upload_display">アップロード画像の表示</a></li>
     </ol>
 </body>
 
